--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ wp-content/themes/g5_helium/custom/css-compiled/
 wp-content/cache/gantry5/g5_helium/compiled/
 wp-content/cache/gantry5/g5_helium/html/
 wp-content/cache/gantry5/g5_helium/twig/
+.idea/
