--- a/wp-content/themes/g5_helium/custom/config/shop/styles.yaml
+++ b/wp-content/themes/g5_helium/custom/config/shop/styles.yaml
@@ -1,3 +1,6 @@
 preset: preset6
 base:
   background: '#ffffff'
+header:
+  background-image: 'gantry-media://2017/12/pexels-photo-247287.jpeg'
+  background-overlay: enabled
