--- a/wp-content/themes/g5_helium/custom/config/about/styles.yaml
+++ b/wp-content/themes/g5_helium/custom/config/about/styles.yaml
@@ -9,12 +9,13 @@ link:
   regular: '#ffffff'
   hover: '#eceeef'
 navigation:
-  background: 'rgba(71, 71, 71, 0)'
+  background-image: 'gantry-media://header/pexels-photo-247298.jpeg'
+  background-overlay: enabled
   text-color: '#ffffff'
 header:
   background-image: 'gantry-media://header/pexels-photo-247298.jpeg'
-  background-overlay: disabled
-  text-color: '#eceeef'
+  background-overlay: enabled
+  text-color: '#ffffff'
 intro:
   background: '#ffffff'
   text-color: '#555555'
