--- a/wp-content/themes/g5_helium/custom/config/initiatives/layout.yaml
+++ b/wp-content/themes/g5_helium/custom/config/initiatives/layout.yaml
@@ -4,31 +4,23 @@ preset:
   name: 2-col-left
   timestamp: 1513307855
 layout:
-  /navigation/:
-    -
-      - system-messages-7972
-    -
-      - 'logo-9608 15'
-      - 'menu-6409 65'
-  /header/: {  }
+  navigation: {  }
+  header: {  }
   /container-main/:
     -
       -
         'sidebar 20':
           -
-            - social-7182
-          -
-            - position-sidebar
-          -
-            - position-right
+            - menu-4581
       -
-        'main 60':
+        'main 80':
           -
             - position-breadcrumbs
           -
-            - system-messages-9361
-          -
             - system-content-4937
+          -
+            - 'position-widget-7034 75'
+            - 'social-3179 25'
   /footer/:
     -
       - position-footer
@@ -42,14 +34,20 @@ layout:
 structure:
   navigation:
     type: section
-    attributes:
-      boxed: ''
+    inherit:
+      outline: blog
+      include:
+        - attributes
+        - children
   header:
-    attributes:
-      boxed: ''
+    inherit:
+      outline: blog
+      include:
+        - attributes
+        - children
   sidebar:
-    subtype: aside
     type: section
+    subtype: aside
     block:
       fixed: 1
   container-main:
@@ -59,15 +57,15 @@ structure:
     attributes:
       boxed: ''
 content:
-  position-sidebar:
+  menu-4581:
     attributes:
-      key: sidebar
-  position-right:
-    attributes:
-      key: right
+      menu: initiatives
   position-breadcrumbs:
     attributes:
       key: breadcrumbs
+  position-widget-7034:
+    attributes:
+      widget: '{"type":"widget","widget":"tag_cloud","title":"Tag Cloud","options":{"widget":{"title":"","count":0,"taxonomy":"post_tag"}}}'
   position-footer:
     attributes:
       key: footer
