--- a/wp-content/themes/g5_helium/custom/config/blog_single/layout.yaml
+++ b/wp-content/themes/g5_helium/custom/config/blog_single/layout.yaml
@@ -4,7 +4,15 @@ preset:
   name: fullpage
   timestamp: 1513263333
 layout:
-  navigation: {  }
+  /navigation/:
+    -
+      - system-messages-3233
+    -
+      - 'logo-4434 25'
+      - 'menu-9378 50'
+      - 'menu-7010 25'
+    -
+      - custom-4824
   /header/: {  }
   /main/:
     -
@@ -18,11 +26,9 @@ layout:
 structure:
   navigation:
     type: section
-    inherit:
-      outline: about
-      include:
-        - attributes
-        - children
+    attributes:
+      boxed: ''
+      class: ''
   header:
     attributes:
       boxed: ''
@@ -36,6 +42,40 @@ structure:
         - attributes
         - children
 content:
+  system-messages-3233:
+    inherit:
+      outline: about
+      include:
+        - attributes
+        - block
+      particle: system-messages-2770
+  logo-4434:
+    title: 'Logo / Image'
+    inherit:
+      outline: about
+      include:
+        - attributes
+        - block
+      particle: logo-5067
+  menu-9378:
+    inherit:
+      outline: about
+      include:
+        - attributes
+        - block
+      particle: menu-2524
+  menu-7010:
+    inherit:
+      outline: about
+      include:
+        - attributes
+        - block
+      particle: menu-5767
+  custom-4824:
+    title: 'Custom HTML'
+    attributes:
+      html: "<div class=\"tagline\">\n\n   <h1>Blog</h1>\n</div>"
+      twig: '1'
   custom-4017:
     title: Breadcrumbs
     inherit:
