--- a/wp-content/themes/g5_helium/custom/config/default/styles.yaml
+++ b/wp-content/themes/g5_helium/custom/config/default/styles.yaml
@@ -13,7 +13,7 @@ link:
   hover: '#eceeef'
 navigation:
   background: 'rgba(71, 71, 71, 0)'
-  background-image: 'gantry-media://header/img01.jpg'
+  background-image: 'gantry-media://header/pexels-photo-1181317.jpeg'
   background-overlay: enabled
   text-color: '#ffffff'
 header:
