updated gitignore file to include wp-config

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ wp-content/cache/gantry5/g5_helium/compiled/
 wp-content/cache/gantry5/g5_helium/html/
 wp-content/cache/gantry5/g5_helium/twig/
 .idea/
+wp-config.php
